--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello darkness my old friend
+<head>
+    <link rel="stylesheet" href="miyazaki.css">
+</head>
+<body>
+    <!-- Bonfirelit Animation-->
+     <div id="bonfire-bg">
+        <span class="bonfire-text">
+            BONFIRE LIT</span><br>
+     </div>
+   
+    <!-- here begins the code-->
+     <div id="bonfire"><img src="/s1fp/Contents/Bonfire.png">
+        </div>
+    <br><a href="2.html"> </a>
+    
+</body>
