--- a/s1fp/index.html
+++ b/s1fp/index.html
@@ -2,6 +2,15 @@
     <link rel="stylesheet" href="miyazaki.css">
 </head>
 <body>
-    BONFIRE LIT
-    <br><a href="2.html">go to 2nd page</a>
+    <!-- Bonfirelit Animation-->
+     <div id="bonfire-bg">
+        <span class="bonfire-text">
+            BONFIRE LIT</span><br>
+     </div>
+   
+    <!-- here begins the code-->
+     <div id="bonfire"><img src="/s1fp/Contents/Bonfire.png">
+        </div>
+    <br><a href="2.html"> </a>
+    
 </body>
