--- a/s1fp/index.html
+++ b/s1fp/index.html
@@ -9,8 +9,16 @@
      </div>
    
     <!-- here begins the code-->
-     <div id="bonfire"><img src="/s1fp/Contents/Bonfire.png">
+     <div id="bonfire"><img src="../s1fp/Contents/Bonfire.png" alt="Bonfire">
         </div>
-    <br><a href="2.html"> </a>
     
+
+    <div id="FrontgateL">
+        <div id="FrontgateF"><span class="Promptext">
+            Does not open from this side</span><br></div>
+    </div>
+
+
+    <br><a href="Room1.html"> <div id= "realD"></div></a>
+
 </body>
