--- a/s1fp/Room1.html
+++ b/s1fp/Room1.html
@@ -1,11 +1,11 @@
 <head>
-    <link rel="stylesheet" href="Rooms.css">
+    <link rel="stylesheet" href="Room1.css">
 </head>
 
 <body>
  <!-- Room 1 Transition-->
- <div id="Room1"><img src="../s1fp/Contents/Room1.png" alt="Bonfire">
- </div>
+ 
 
+ <br><a href="ChestRoom.html"> <div id= "Room1Exit"></div></a>
 
 </body>
