--- a/HEYBOOBO.github.io-main/s1fp/index.html
+++ b/HEYBOOBO.github.io-main/s1fp/index.html
@@ -9,7 +9,7 @@
      </div>
    
     <!-- here begins the code-->
-     <div id="bonfire"><img src="..s1fp/Contents/Bonfire.png" alt="Bonfire">
+     <div id="bonfire"><img src="../s1fp/Contents/Bonfire.png" alt="Bonfire">
         </div>
     
 
