--- a/s1fp/YOU_DIED.html
+++ b/s1fp/YOU_DIED.html
@@ -8,9 +8,9 @@
     <div><span class="DIED-text">YOU DIED</span><br></div>
 
     <!-- here begins the code-->
-    <div id="bonfire"><img src="../s1fp/Contents/Bonfire.png" alt="Bonfire">
+    <div id="bonfire"><img src="Contents/Bonfire.png" alt="Bonfire">
     </div>
-
+    <audio src="Contents/DS-DIED.mp3"></audio>
 
 <div id="FrontgateL">
     <div id="FrontgateF"><span class="Promptext">
@@ -19,5 +19,8 @@
 
 
 <br><a href="Room1.html"> <div id= "realD"></div></a>
+
+
+
 
 </body>
