--- a/s1fp/index.html
+++ b/s1fp/index.html
@@ -3,13 +3,18 @@
 </head>
 <body>
     <!-- Bonfirelit Animation-->
+    <audio autoplay>
+        <source src="Contents/DS-NEWAREA.mp3" type="audio/mpeg">
+    </audio>
+    
+
      <div id="bonfire-bg">
         <span class="bonfire-text">
             BONFIRE LIT</span><br>
      </div>
    
     <!-- here begins the code-->
-     <div id="bonfire"><img src="../s1fp/Contents/Bonfire.png" alt="Bonfire">
+     <div id="bonfire"><img src="Contents/Bonfire.png" alt="Bonfire">
         </div>
     
 
