--- a/s1fp/ChestRoom.html
+++ b/s1fp/ChestRoom.html
@@ -10,7 +10,7 @@
 </div>
 
 <div id="Chest2L">
-    <a href="YOU_DIED.html"><div id="Chest2F"><span class="Promptext">
+    <a href="MimicChest.html"><div id="Chest2F"><span class="Promptext">
         Open</span></a></div>
 </div>
 
