--- a/s1fp/YOU_DIED.html
+++ b/s1fp/YOU_DIED.html
@@ -2,12 +2,14 @@
     <link rel="stylesheet" href="miyazaki.css">
 </head>
 
-<body>
+
+
+    <!-- YOU DIED-->
 
     <div id="YOU_DIED-bg"> </div>
     <div><span class="DIED-text">YOU DIED</span><br></div>
 
-    <!-- here begins the code-->
+
     <div id="bonfire"><img src="Contents/Bonfire.png" alt="Bonfire">
     </div>
     <audio src="Contents/DS-DIED.mp3"></audio>
@@ -19,8 +21,6 @@
 
 
 <br><a href="Room1.html"> <div id= "realD"></div></a>
-
-
 
 
 </body>
